# FoundationCode

./: .gitignore  LICENSE  README.md  free-space.sh  pyproject.toml
.github/workflows/: ci.yml
foundationcode/: __init__.py  __main__.py  agent.py  cli.py  context.py  fm.py  parsing.py  progress.py  recipes.py  schema.py  scope.py  tools.py  ui.py
tests/: test_core.py
