[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foundationcode"
version = "0.3.0"
description = "An autonomous coding agent powered by Apple's on-device Foundation Models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "jerynv" }]
keywords = ["apple", "foundation-models", "coding-agent", "llm", "on-device", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jerynv/FoundationCode"
Repository = "https://github.com/jerynv/FoundationCode"
Issues = "https://github.com/jerynv/FoundationCode/issues"

[project.scripts]
fmcode = "foundationcode.cli:main"

[tool.setuptools]
packages = ["foundationcode"]
